More efficient and comprehensive caching of VariablePath.